added link task

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -1,5 +1,5 @@
 #
-# This pipeline needs the following tasks from Tekton Hub
+# This pipeline needs the following tasks from Tekton Hub.
 #   - git-clone
 #   - flake8
 #
